[workspace]
resolver = "2"
members = [
    "clip-native",
    "clip-text-native",
    "ocr-native",
    "sam2-native",
    "dino-native",
]

[workspace.dependencies]
# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 decoding
base64 = "0.22"

# Release profile for all workspace members
[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Single codegen unit for better LTO
panic = "abort"      # Smaller binaries without panic unwinding
strip = true         # Strip symbols
