[package]
name = "dino-processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dino-processor"
path = "src/main.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
strip = true
